crates/strider/tests/snapshots/v3__x64__memory__array_copy.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v6" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v8" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "7" -> "v8" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "7" -> "v6" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "10" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v8" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "10" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "14" -> "11" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "15" -> "11" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "16" -> "11" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "16" [label="init\nXMM1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="arg[2] ← RDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="φ RAX", shape=house, fillcolor="#163030"];
  "10" -> "13" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "17" -> "13" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" -> "13" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x1:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="φ RAX", shape=house, fillcolor="#163030"];
  "5" -> "19" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "18" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="init\nRAX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="φ Mem", shape=house, fillcolor="#163030"];
  "10" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "22" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "24" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "25" -> "23" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "26" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "24" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "27" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="Mul:u64", shape=box, fillcolor="#2d2d2d"];
  "19" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="arg[1] ← RSI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="φ Mem", shape=house, fillcolor="#163030"];
  "5" -> "24" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "23" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "31" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="arg[0] ← RDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="Equal\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "14" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "14" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
}
